# Colecci-n_de_Ejercicios-STL

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: Matematicas.cpp  Matematicas.h  main1.cpp
Ejercicio2/: circulo.cpp  circulo.h  ejercicio2.cpp  ejercicio2.h  main2.cpp  tiangulo.cpp  tiangulo.h
Ejercicio3/: Circ.cpp  Circ.h  ejercicio3.cpp  ejercicio3.h  main3.cpp
Ejercicio4/: Ciencia.cpp  Ciencia.h  main4.cpp
Ejercicio5/: ejercicio5.cpp  ejercicio5.h  main5.cpp
