cmake_minimum_required(VERSION 3.29)
project(Colecci_n_de_Ejercicios_STL)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_1
        "main.cpp"
        "Ejercicio1/Matematicas.cpp"
        "Ejercicio1/Matematicas.h"
        "Ejercicio2/circulo.h"

        "Ejercicio2/circulo.cpp"
        "Ejercicio2/circulo.h"

        "Ejercicio2/tiangulo.cpp"
        "Ejercicio2/tiangulo.h"

        "Ejercicio3/Circ.cpp"
        "Ejercicio3/Circ.h"

        "Ejercicio4/Ciencia.cpp"
        "Ejercicio4/Ciencia.h"
        Ejercicio3/ejercicio3.h
        Ejercicio3/ejercicio3.cpp
        Ejercicio2/ejercicio2.cpp
        Ejercicio5/ejercicio5.cpp)